# clarity

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp
Clarity/: CLI_Main.cpp  CMakeLists.txt  mainwindow.ui
Clarity/headers/: Dilation.h
headers/: BinaryThreshold.h  Erosion.h  Image.h  Process.h
sources/: BinaryThreshold.cpp  Dilation.cpp  Erosion.cpp  Image.cpp  Process.cpp
